--- a/dynamic-strategy-core/pom.xml
+++ b/dynamic-strategy-core/pom.xml
@@ -28,5 +28,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.moandjiezana.toml/toml4j -->
+        <dependency>
+            <groupId>com.moandjiezana.toml</groupId>
+            <artifactId>toml4j</artifactId>
+            <version>0.7.2</version>
+        </dependency>
     </dependencies>
 </project>
